<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="6"
        android:background="@drawable/img_imeeting_navbar_bg"
        android:gravity="center_vertical"
        android:paddingLeft="20dp"
        android:text="@string/phoneBind_alertDialog_title"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@android:color/white" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        android:padding="4dp" >

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:padding="4dp" >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:text="@string/phoneBind_alertDialog_bindingPhoneTextView_text" />

            <EditText
                android:id="@+id/pbd_phoneBind_phoneEditText"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="phone" >

                <requestFocus />
            </EditText>
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:padding="4dp" >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="3"
                android:text="@string/phoneBind_alertDialog_verificationCodeTextView_text" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1" >

                <EditText
                    android:id="@+id/pbd_phoneBind_verificationCodeEditText"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:inputType="textPassword" />

                <Button
                    android:id="@+id/pbd_phoneBind_getVerificationCodeBtn"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:text="@string/phoneBind_alertDialog_getVerificationCodeBtn_normalTitle" />
            </LinearLayout>
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:padding="4dp" >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:text="@string/phoneBind_alertDialog_bindingAccount_loginPwdTextView_text" />

            <EditText
                android:id="@+id/pbd_bindingAccount_loginPwd_editText"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="textPassword" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:padding="4dp" >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:text="@string/phoneBind_alertDialog_bindingAccount_loginPwdConfirmTextView_text" />

            <EditText
                android:id="@+id/pbd_bindingAccount_loginConfirmPwd_editText"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="textPassword" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp" >

            <Button
                android:id="@+id/pbd_phoneBind_cancelBindBtn"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/phoneBind_alertDialog_phonebind_cancelBindBtn_title" />

            <Button
                android:id="@+id/pbd_phoneBind_confirmBindBtn"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:layout_weight="1"
                android:text="@string/phoneBind_alertDialog_phonebind_confirmBindBtn_title" />
        </TableRow>
    </LinearLayout>

</LinearLayout>