<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="4"
        android:background="@drawable/img_imeeting_navbar_bg"
        android:gravity="center_vertical"
        android:paddingLeft="20dp"
        android:text="@string/bindedAccountLogin_alertDialog_title"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@android:color/white" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        android:padding="4dp" >

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:padding="4dp" >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:text="@string/bindedAccountLogin_alertDialog_loginUserNameTextView_text" />

            <EditText
                android:id="@+id/bald_bindedAccount_loginUserName_editText"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="text" >

                <requestFocus />
            </EditText>
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:padding="4dp" >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:text="@string/bindedAccountLogin_alertDialog_loginPwdTextView_text" />

            <EditText
                android:id="@+id/bald_bindedAccount_loginPwd_editText"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="textPassword" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp" >

            <Button
                android:id="@+id/bald_bindedAccount_loginCancelBtn"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/bindedAccountLogin_alertDialog_loginCancelBtn_title" />

            <Button
                android:id="@+id/bald_bindedAccount_loginConfirmBtn"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:layout_weight="1"
                android:text="@string/bindedAccountLogin_alertDialog_loginConfirmBtn_title" />
        </TableRow>
    </LinearLayout>

</LinearLayout>