<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".assistant.SettingActivity" >

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginTop="10dp"
        android:layout_weight="6.8" >

        <FrameLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_gravity="bottom"
            android:layout_marginTop="16dp"
            android:background="@drawable/setting_myaccount6bindcontactinfo_group_bg" >

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_gravity="bottom"
                android:layout_marginTop="16dp"
                android:background="@android:color/transparent"
                android:padding="6dp" >

                <TextView
                    android:id="@+id/set_account6deviceId6contactsInfoBeBindedLabel_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:gravity="center" />

                <Button
                    android:id="@+id/set_accountLogout_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="6dp"
                    android:text="@string/bindedContactInfo_accountLogoutBtn_title"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/set_account6deviceId6contactsInfoBeBinded_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="6dp"
                    android:layout_toLeftOf="@id/set_accountLogout_button"
                    android:layout_toRightOf="@id/set_account6deviceId6contactsInfoBeBindedLabel_textView"
                    android:ellipsize="middle"
                    android:gravity="left|center_vertical"
                    android:singleLine="true" />
            </RelativeLayout>
        </FrameLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:layout_gravity="left"
            android:layout_marginLeft="20dp"
            android:background="@android:color/white"
            android:gravity="center"
            android:text="@string/myAccountGroup_tipTextView_text"
            android:textStyle="bold" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        android:layout_weight="3.4" >

        <FrameLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_gravity="bottom"
            android:layout_marginTop="16dp"
            android:background="@drawable/setting_myaccount6bindcontactinfo_group_bg" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_gravity="bottom"
                android:layout_marginTop="16dp"
                android:background="@android:color/transparent"
                android:orientation="vertical"
                android:padding="6dp" >

                <TextView
                    android:id="@+id/set_bindContactInfo_tipTextView"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_marginLeft="6dp"
                    android:layout_marginRight="6dp"
                    android:layout_weight="5"
                    android:gravity="center_vertical"
                    android:text="@string/bindContactInfo_tipTextView_text"
                    android:textColor="@color/golden_yellow" />

                <LinearLayout
                    android:id="@+id/set_contactsInfoBind_linearLayout"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_marginTop="6dp"
                    android:layout_weight="3"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:paddingLeft="40dp"
                    android:paddingRight="40dp" >

                    <ImageButton
                        android:id="@+id/set_phoneBind_imageButton"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:layout_weight="1"
                        android:background="@android:color/transparent"
                        android:contentDescription="@string/phoneBind_imageBtn_contentDescription"
                        android:scaleType="centerCrop"
                        android:src="@drawable/phonebind_bg" />

                    <ImageButton
                        android:id="@+id/set_emailBind_imageButton"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:layout_marginLeft="32dp"
                        android:layout_weight="1"
                        android:background="@android:color/transparent"
                        android:contentDescription="@string/emailBind_imageBtn_contentDescription"
                        android:scaleType="centerCrop"
                        android:src="@drawable/emailbind_bg"
                        android:visibility="gone" />
                </LinearLayout>
            </LinearLayout>
        </FrameLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:layout_gravity="left"
            android:layout_marginLeft="20dp"
            android:background="@android:color/white"
            android:gravity="center"
            android:text="@string/bindContactInfoGroup_tipTextView_text"
            android:textStyle="bold" />
    </FrameLayout>

    <Button
        android:id="@+id/set_accountLogin_button"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="7.6"
        android:text="@string/bindContactInfo_accountLoginBtn_title" />

</LinearLayout>