<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:baselineAligned="false"
    android:orientation="horizontal"
    tools:context=".talkinggroup.SimpleIMeetingMainActivity" >

    <RelativeLayout
        android:id="@+id/cs_contactsList_relativeLayout"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="5"
        android:background="@drawable/img_contactslist_relativelayout_bg" >

        <TextView
            android:id="@+id/cs_cl_headTip_textView"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/img_contactsselect_header_bg"
            android:gravity="center_vertical"
            android:paddingLeft="12dp"
            android:text="@string/contactsSelect_contactsList_headTip_textViewText" />

        <RelativeLayout
            android:id="@+id/cs_cl_contactSearch_relativeLayout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/cs_cl_headTip_textView" >

            <ImageButton
                android:id="@+id/cs_cl_contactSearchImgBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:contentDescription="@string/contactsSelect_contactsList_contactSearchImgBtn_contentDescription"
                android:src="@android:drawable/ic_input_add" />

            <EditText
                android:id="@+id/cs_cl_contactSearchEditText"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@id/cs_cl_contactSearchImgBtn"
                android:hint="@string/contactsSelect_contactsList_contactSearchEditText_hint" >

                <requestFocus />
            </EditText>
        </RelativeLayout>

        <FrameLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_below="@id/cs_cl_contactSearch_relativeLayout" >

            <ListView
                android:id="@+id/cs_contactsListView"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:cacheColorHint="@android:color/transparent"
                android:divider="@drawable/img_addressbook_contact_listview_divider_bg"
                android:fadingEdge="none"
                android:headerDividersEnabled="false"
                android:listSelector="@android:color/transparent"
                android:scrollbars="none" >
            </ListView>
        </FrameLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/cs_selectedContacts_relativeLayout"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginLeft="-7dp"
        android:layout_weight="12"
        android:visibility="gone" >

        <TextView
            android:id="@+id/cs_sc_headTip_textView"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/img_selectedcontacts_header_bg"
            android:gravity="center_vertical"
            android:paddingLeft="12dp"
            android:text="@string/contactsSelect_selectedContacts_headTip_textViewText" />

        <ListView
            android:id="@+id/cs_selectedContactsListView"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_below="@id/cs_sc_headTip_textView"
            android:layout_marginLeft="1dp"
            android:background="@drawable/img_selectedcontacts_listview_bg"
            android:cacheColorHint="@android:color/transparent"
            android:divider="@drawable/img_selectedcontacts_listview_divider_bg"
            android:fadingEdge="none"
            android:headerDividersEnabled="false"
            android:listSelector="@android:color/transparent"
            android:scrollbars="none" >
        </ListView>
    </RelativeLayout>

</LinearLayout>